--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 				Unique list
 			</button>
 			<div class="conatiner">
-				<div class="row row row-cols-2 row-cols-lg-3 py-3"></div>
+				<div class="row row row-cols-2 row-cols-lg-3 py-3 px-2"></div>
+			</div>
+			<div class="conatiner">
+				<div class="row-1"></div>
+				<div class="row row row-cols-2 row-cols-lg-3 py-3 px-2 unique"></div>
 			</div>
 		</div>
 		<!-- Optional JavaScript; choose one of the two! -->
